# baremetal_c_startup_gd32e23x

./: CMakeLists.txt
ld/: gd32e23x.ld
src/: gd32e23x_it.h  main.cpp  systick.c  systick.h
src/SYSTEM/GD/GD32E23x/Source/GCC/: GD32E230C4_DEFAULT.ld  startup_gd32e23x.S
src/startup/: handlers_cm.cpp
